CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
Copyright (c) 2016, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved.

1.1.5
-----
System
* default tuples
	@true
	@false
	
Commands
* general
	* more cleanup
* individual commands
	* db
		* -columnnames
		* bug: -bytes
	* gensh -strictPosix
        * rs -fileblob

Extensions
* general
	* some cleanup
* new
	* sysshep.qsys2.system_status.ublu
* updated
	* sysshep.qsys2.sysdiskstat.ublu
		* changed format

1.1.4 2016-11-04
-----
System
*   Debugger now handles autonomic variables

Commands
* general
	* minor fixes at Java level
	* major fixes to rs and db
* individual commands
    * num -bin
	* outq and printer rationalized
		* outq -get -getint -getfloat -getstring
		* outq removed superflous dash-commands
		* printer -getint -getfloat -getstring
	* rs & ftp bug in close deleting tuple fixed
	* rs
		* -bytes added
		* -close?? dash-commands  no longer delete tuple
		* -get -lget
		* -abs -rel -next
	* savesys
	
Extensions
* new
	* ux.printobj.ublu
	* sysshep directory
	
1.1.3 2016-10-14
System:
* Much refactoring at the Java level
* ublu.Ublu takes -include (i) switch and -silent (s) switch
* autonomic tuple variables
* save and restore const map
* ublu.util.Renderer
	* ObjectLockListEntry	

Commands:
* general
	* deprecate -instance in favor of -new
	* command descriptions cleaned up
	* some commands' argument parsing modernized
* individual commands	
	* const -list
	* db -json
	* IF now tests for null as well as not-true-not-false
	* ifs -fromfile
	* include -s (for -silent)
	* joblog command added
	* json command added
	* job -hold -release
	* lifo -true -false -null
	* msgq no longer does automatic close
	* printer -wtrjob
	* printer -get works for all attributes now
	* put pushes null correctly
	* RETURN removed (doesn't work correctly)
	* rs -json
	* string --,-string -toascii -toas400
	* system modernized
	* tuple -autonome(s)

Miscellaneous: