@@ -17,7 +17,10 @@ Commands
 		* -columnnames
 		* bug: -bytes
 	* gensh -strictPosix
-        * rs -fileblob
+    * rs
+        * -fileblob
+        * -getblob
+        * -lgetblob
 
 Extensions
 * general
